# dice-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: shader.h
include/glad/: glad.h
resources/: d20.blend  d20.blend1  d20_gen.py  d4.blend  d4.blend1  d6.blend  d6.blend1  floor.blend  floor.blend1
src/: Dice.cpp  Dice.h  Environment.cpp  Environment.h  Mesh.cpp  Mesh.h  SolidBody.cpp  SolidBody.h  Visualizer.cpp  Visualizer.h  diceSpecs.h  glad.c  main.cpp  mesh.cpp  mesh.h  solidBody.cpp  solidBody.h  visualizer.cpp  visualizer.h
src/diceUI/: ConvexPolytope.cpp  ConvexPolytope.h  DiceVisualizer.cpp  DiceVisualizer.h  Geometry.cpp  Geometry.h  GeometryTest.py  ObjReader.cpp  ObjReader.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  SolidBody.cpp  SolidBody.h  diceUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/shaders/: Shader.cpp  Shader.h  fragment.glsl  fragment_color.glsl  shader.cpp  shader.h  vertex.glsl
